# goit-pythonweb-hw-10

./: .env.example  README.md  main.py  pyproject.toml
src/conf/: config.py
src/core/: depend_service.py
src/entity/: models.py
src/repositories/: contacts.py
src/repository/: contacts.py
src/routes/: users.py
src/services/: auth.py  contacts.py  upload_file_service.py  user.py
